classifies 10 classes on slightly modified network

--- a/HybridCNN.ipynb
+++ b/HybridCNN.ipynb
@@ -1,29 +1,15 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
-  "metadata": {
-    "colab": {
-      "provenance": []
-    },
-    "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
-    },
-    "language_info": {
-      "name": "python"
-    }
-  },
   "cells": [
     {
       "cell_type": "code",
-      "source": [
-        "!pip install qiskit==0.35.0"
-      ],
+      "execution_count": null,
       "metadata": {
         "id": "UD_8Kn2uvsOc"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "!pip install qiskit==0.35.0"
+      ]
     },
     {
       "cell_type": "code",
@@ -50,6 +36,11 @@
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "Teu4t-H9v9W2"
+      },
+      "outputs": [],
       "source": [
         "class QuantumCircuit:\n",
         "    \"\"\" \n",
@@ -93,30 +84,30 @@
         "        print(expectation)\n",
         "        \n",
         "        return np.array([expectation])"
-      ],
-      "metadata": {
-        "id": "Teu4t-H9v9W2"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "FOPXpw9FwAiG"
+      },
+      "outputs": [],
       "source": [
         "simulator = qiskit.Aer.get_backend('aer_simulator')\n",
         "\n",
         "circuit = QuantumCircuit(1, simulator, 100)\n",
         "print('Expected value for rotation pi {}'.format(circuit.run([np.pi])[0]))\n",
         "circuit._circuit.draw()"
-      ],
-      "metadata": {
-        "id": "FOPXpw9FwAiG"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "aD8r3whTwGCT"
+      },
+      "outputs": [],
       "source": [
         "class HybridFunction(Function):\n",
         "    \"\"\" Hybrid quantum - classical function definition \"\"\"\n",
@@ -162,15 +153,15 @@
         "        \n",
         "    def forward(self, input):\n",
         "        return HybridFunction.apply(input, self.quantum_circuit, self.shift)"
-      ],
-      "metadata": {
-        "id": "aD8r3whTwGCT"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "B0c9vAPXwJFd"
+      },
+      "outputs": [],
       "source": [
         "# Concentrating on the first 100 samples\n",
         "n_samples = 100\n",
@@ -181,20 +172,31 @@
         "# Leaving only labels 0 and 1 \n",
         "idx = np.append(np.where(X_train.targets == 0)[0][:n_samples], \n",
         "                np.where(X_train.targets == 1)[0][:n_samples])\n",
+        "#adding 100 samples from rest\n",
+        "idx = np.append(idx, np.where(X_train.targets == 2)[0][:n_samples])\n",
+        "idx = np.append(idx, np.where(X_train.targets == 3)[0][:n_samples])\n",
+        "idx = np.append(idx, np.where(X_train.targets == 4)[0][:n_samples])\n",
+        "idx = np.append(idx, np.where(X_train.targets == 5)[0][:n_samples])\n",
+        "idx = np.append(idx, np.where(X_train.targets == 6)[0][:n_samples])\n",
+        "idx = np.append(idx, np.where(X_train.targets == 7)[0][:n_samples])\n",
+        "idx = np.append(idx, np.where(X_train.targets == 8)[0][:n_samples])\n",
+        "idx = np.append(idx, np.where(X_train.targets == 9)[0][:n_samples])\n",
         "\n",
         "X_train.data = X_train.data[idx]\n",
         "X_train.targets = X_train.targets[idx]\n",
         "\n",
+        "print(X_train)\n",
+        "\n",
         "train_loader = torch.utils.data.DataLoader(X_train, batch_size=1, shuffle=True)"
-      ],
-      "metadata": {
-        "id": "B0c9vAPXwJFd"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "XQXL5a6uwL5C"
+      },
+      "outputs": [],
       "source": [
         "n_samples_show = 6\n",
         "\n",
@@ -210,17 +212,17 @@
         "    axes[n_samples_show - 1].set_title(\"Labeled: {}\".format(targets.item()))\n",
         "    \n",
         "    n_samples_show -= 1"
-      ],
-      "metadata": {
-        "id": "XQXL5a6uwL5C"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "cVq45z_ewQZ7"
+      },
+      "outputs": [],
       "source": [
-        "n_samples = 50\n",
+        "n_samples = 15\n",
         "\n",
         "X_test = datasets.MNIST(root='./data', train=False, download=True,\n",
         "                        transform=transforms.Compose([transforms.ToTensor()]))\n",
@@ -228,19 +230,28 @@
         "idx = np.append(np.where(X_test.targets == 0)[0][:n_samples], \n",
         "                np.where(X_test.targets == 1)[0][:n_samples])\n",
         "\n",
+        "idx = np.append(idx, np.where(X_test.targets == 2)[0][:n_samples])\n",
+        "idx = np.append(idx, np.where(X_test.targets == 3)[0][:n_samples])\n",
+        "idx = np.append(idx, np.where(X_test.targets == 4)[0][:n_samples])\n",
+        "idx = np.append(idx, np.where(X_test.targets == 5)[0][:n_samples])\n",
+        "idx = np.append(idx, np.where(X_test.targets == 6)[0][:n_samples])\n",
+        "idx = np.append(idx, np.where(X_test.targets == 7)[0][:n_samples])\n",
+        "idx = np.append(idx, np.where(X_test.targets == 8)[0][:n_samples])\n",
+        "idx = np.append(idx, np.where(X_test.targets == 9)[0][:n_samples])\n",
+        "\n",
         "X_test.data = X_test.data[idx]\n",
         "X_test.targets = X_test.targets[idx]\n",
         "\n",
         "test_loader = torch.utils.data.DataLoader(X_test, batch_size=1, shuffle=True)"
-      ],
-      "metadata": {
-        "id": "cVq45z_ewQZ7"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "aDB1R7ebwUYZ"
+      },
+      "outputs": [],
       "source": [
         "class Net(nn.Module):\n",
         "    def __init__(self):\n",
@@ -251,6 +262,9 @@
         "        self.fc1 = nn.Linear(256, 64)\n",
         "        self.fc2 = nn.Linear(64, 1)\n",
         "        self.hybrid = Hybrid(qiskit.Aer.get_backend('aer_simulator'), 100, np.pi / 2)\n",
+        "        #added\n",
+        "        self.fc3 = nn.Linear(1, 10)\n",
+        "        self.lsm = nn.LogSoftmax(dim = 1)\n",
         "\n",
         "    def forward(self, x):\n",
         "        x = F.relu(self.conv1(x))\n",
@@ -262,16 +276,21 @@
         "        x = F.relu(self.fc1(x))\n",
         "        x = self.fc2(x)\n",
         "        x = self.hybrid(x)\n",
-        "        return torch.cat((x, 1 - x), -1)"
-      ],
-      "metadata": {
-        "id": "aDB1R7ebwUYZ"
-      },
-      "execution_count": null,
-      "outputs": []
+        "        #hybrid returns a 64-bit float, so we must cast to 32 bit for the last linear layer\n",
+        "        x = x.type(torch.float32)\n",
+        "        x = self.fc3(x)\n",
+        "        #need a logsoftmax layer\n",
+        "        x = self.lsm(x)\n",
+        "        return x"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "JVIWJstdwYPL"
+      },
+      "outputs": [],
       "source": [
         "model = Net()\n",
         "optimizer = optim.Adam(model.parameters(), lr=0.001)\n",
@@ -298,29 +317,29 @@
         "    loss_list.append(sum(total_loss)/len(total_loss))\n",
         "    print('Training [{:.0f}%]\\tLoss: {:.4f}'.format(\n",
         "        100. * (epoch + 1) / epochs, loss_list[-1]))"
-      ],
-      "metadata": {
-        "id": "JVIWJstdwYPL"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "MncO96_zw5on"
+      },
+      "outputs": [],
       "source": [
         "plt.plot(loss_list)\n",
         "plt.title('Hybrid NN Training Convergence')\n",
         "plt.xlabel('Training Iterations')\n",
         "plt.ylabel('Neg Log Likelihood Loss')"
-      ],
-      "metadata": {
-        "id": "MncO96_zw5on"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "gyEL8vLGw-LQ"
+      },
+      "outputs": [],
       "source": [
         "model.eval()\n",
         "with torch.no_grad():\n",
@@ -339,15 +358,15 @@
         "        sum(total_loss) / len(total_loss),\n",
         "        correct / len(test_loader) * 100)\n",
         "        )"
-      ],
-      "metadata": {
-        "id": "gyEL8vLGw-LQ"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "qUi2ERk-xEG7"
+      },
+      "outputs": [],
       "source": [
         "n_samples_show = 6\n",
         "count = 0\n",
@@ -369,12 +388,21 @@
         "        axes[count].set_title('Predicted {}'.format(pred.item()))\n",
         "        \n",
         "        count += 1"
-      ],
-      "metadata": {
-        "id": "qUi2ERk-xEG7"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     }
-  ]
+  ],
+  "metadata": {
+    "colab": {
+      "provenance": []
+    },
+    "kernelspec": {
+      "display_name": "Python 3",
+      "name": "python3"
+    },
+    "language_info": {
+      "name": "python"
+    }
+  },
+  "nbformat": 4,
+  "nbformat_minor": 0
 }
