tuned learning rate better, added valid loss tracking

--- a/HybridCNN.ipynb
+++ b/HybridCNN.ipynb
@@ -481,16 +481,20 @@
       "source": [
         "model = Net()\n",
         "#optimizer = optim.Adam(model.parameters(), lr=0.001)\n",
-        "optimizer = optim.Adam(model.parameters(), lr=0.003)\n",
+        "optimizer = optim.Adam(model.parameters(), lr=0.002)\n",
         "loss_func = nn.NLLLoss()\n",
         "\n",
         "#20\n",
         "epochs = 20\n",
         "loss_list = []\n",
+        "valid_list = []\n",
+        "valid_loss = []\n",
         "\n",
         "model.train()\n",
         "for epoch in range(epochs):\n",
         "    total_loss = []\n",
+        "    valid_total = []\n",
+        "    model.train()\n",
         "    for batch_idx, (data, target) in enumerate(train_loader):\n",
         "        optimizer.zero_grad()\n",
         "        # Forward pass\n",
@@ -504,8 +508,30 @@
         "        \n",
         "        total_loss.append(loss.item())\n",
         "    loss_list.append(sum(total_loss)/len(total_loss))\n",
+        "\n",
+        "    model.eval()\n",
+        "    with torch.no_grad():\n",
+        "    \n",
+        "      correct = 0\n",
+        "      for batch_idx, (data, target) in enumerate(test_loader):\n",
+        "          output = model(data)\n",
+        "          \n",
+        "          pred = output.argmax(dim=1, keepdim=True) \n",
+        "          correct += pred.eq(target.view_as(pred)).sum().item()\n",
+        "\n",
+        "          loss = loss_func(output, target)\n",
+        "          valid_total.append(loss.item())\n",
+        "\n",
+        "    valid_acc = correct / len(test_loader) * 100\n",
+        "    valid_list.append(valid_acc)\n",
+        "    valid_loss.append(sum(valid_total)/len(valid_total))\n",
+        "\n",
         "    print('Training [{:.0f}%]\\tLoss: {:.4f}'.format(\n",
-        "        100. * (epoch + 1) / epochs, loss_list[-1]))"
+        "        100. * (epoch + 1) / epochs, loss_list[-1]))\n",
+        "    print('Performance on test data:\\n\\tLoss: {:.4f}\\n\\tAccuracy: {:.1f}%'.format(\n",
+        "        valid_loss[-1],\n",
+        "        valid_acc)\n",
+        "        )"
       ]
     },
     {
@@ -517,7 +543,20 @@
       "outputs": [],
       "source": [
         "plt.plot(loss_list)\n",
+        "plt.plot(valid_loss)\n",
         "plt.title('Hybrid NN Training Convergence')\n",
+        "plt.xlabel('Training Iterations')\n",
+        "plt.ylabel('Neg Log Likelihood Loss')"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "plt.plot(valid_list)\n",
+        "plt.title('Hybrid NN Valid Accuracy')\n",
         "plt.xlabel('Training Iterations')\n",
         "plt.ylabel('Neg Log Likelihood Loss')"
       ]
